--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -5,10 +5,52 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bootstrap</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<!--  -->
 
+		<div class="container-md border border-dark mt-5">
+			<h1 class="display-1 text-center">Hello World!</h1>
+		</div>
+
+		<div class="container-md border border-dark mt-5">
+			<h2 class="display-2 text-light bg-dark mt-4 text-center">Jacob Rose</h2>
+			<h3 class="display-3 border-bottom border-primary p-2 text-center">
+				Junior Frontend Developer
+			</h3>
+			<h3 class=""><span class="badge badge-dark p-3 mt-5">In Progress</span></h3>
+		</div>
+
+		<div class="container-md p-0">
+			<h3><button type="button" class="btn btn-dark mt-5">Hire!</button></h3>
+		</div>
+
 		<!--  -->
+		<!--  -->
+		<!--  -->
+		<!--  -->
+		<!--  -->
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
