--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -21,15 +21,12 @@
 		</div>
 
 		<div class="container-md border border-dark mt-5">
-			<h2 class="display-2 text-light bg-dark mt-4 text-center">Jacob Rose</h2>
-			<h3 class="display-3 border-bottom border-primary p-2 text-center">
-				Junior Frontend Developer
-			</h3>
-			<h3 class=""><span class="badge badge-dark p-3 mt-5">In Progress</span></h3>
+			<h2 class="display-3 text-light bg-dark mt-4 text-center">Jacob Rose</h2>
+			<h3 class="display-3 border-bottom border-dark p-2 text-center">Junior Frontend Developer</h3>
 		</div>
 
 		<div class="container-md p-0">
-			<h3><button type="button" class="btn btn-dark mt-5">Hire!</button></h3>
+			<h3 class=""><span class="badge badge-success p-3 mt-5">In Progress</span></h3>
 		</div>
 
 		<!--  -->
