Bootstrap Grid continuation

--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -18,13 +18,13 @@
 		<h1 class="display-1 text-center text-dark mt-2">Bootstrap Grid!</h1>
 		<div class="container">
 			<div class="row mt-5">
-				<div class="col-6 bg-primary text-light">50% of container space</div>
-				<div class="col-6 bg-warning">Also 50% of container space</div>
+				<div class="col-6 bg-info text-light">50% of container space</div>
+				<div class="col-6 bg-dark text-light">Also 50% of container space</div>
 			</div>
 		</div>
-		<div class="container mt-5 p-0">
-			<div class="row">
-				<div class="col-6 col-md-3">
+		<div class="container mt-5 p-0 bg-dark">
+			<div class="row p-5">
+				<div class="col-6 col-md-3 text-light">
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
 					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
 					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
@@ -36,13 +36,49 @@
 					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
 					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
 				</div>
-				<div class="col-6 col-md-3">
+				<div class="col-6 col-md-3 text-light">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, veritatis iusto optio expedita ipsa repudiandae
+					officia repellendus nulla cum impedit aperiam nihil quidem, quia ipsam iste ipsum quasi eum illo.
+				</div>
+				<div class="col-6 col-md-3 text-info">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+				</div>
+			</div>
+		</div>
+
+		<div class="container mt-5 p-0 bg-dark">
+			<div class="row p-5 align-items-end">
+				<!-- align-items-(START/CENTER/END) -->
+				<!-- align-items for container ~ row -->
+				<!-- align-self for items ~ col -->
+				<div class="col-6 col-md-3 text-info align-self-start">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+				</div>
+				<div class="col-6 col-md-3 text-light">
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
 					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
 					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
 					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
 				</div>
 				<div class="col-6 col-md-3 text-info">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, veritatis iusto optio expedita ipsa repudiandae
+					officia repellendus nulla cum impedit aperiam nihil quidem, quia ipsam iste ipsum quasi eum illo.
+				</div>
+				<div class="col-6 col-md-3 text-light align-self-center">
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
 					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
 					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
@@ -53,7 +89,7 @@
 
 		<!--  -->
 
-		<div class="row p-5">
+		<div class="row mx-auto p-5">
 			<div class="col-xl-4 col-lg-6 p-5">
 				<img
 					class="img-fluid"
