Bootstrap Grid continuation

--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -87,6 +87,23 @@
 			</div>
 		</div>
 
+		<div class="container mt-5 p-0 bg-dark">
+			<div class="row p-5 justify-content-around">
+				<div class="col-4 text-info">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+				</div>
+				<div class="col-4 text-light">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente sint, aliquam mollitia dolores perferendis porro vel,
+					quae tenetur animi consequuntur commodi incidunt aspernatur? Adipisci deserunt repellendus ducimus, excepturi beatae
+					necessitatibus. Eligendi ducimus facilis voluptas vero aliquid. Aliquid voluptatibus sed aliquam aut quis at ullam
+					labore animi quia, quibusdam cum eos earum, beatae autem consectetur cupiditate consequatur alias adipisci in enim?
+				</div>
+			</div>
+		</div>
+
 		<!--  -->
 
 		<div class="row mx-auto p-5">
