--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -14,7 +14,14 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+
+		
+
+
+
+
 		<!--  -->
+		
 		<h1 class="display-1 text-center text-dark mt-2">Bootstrap Grid!</h1>
 		<div class="container">
 			<div class="row mt-5">
@@ -106,6 +113,13 @@
 
 		<!--  -->
 
+		<!-- 
+			col-md-6               !!!!            =<medium - col-6                                 !!!!
+			col-lg-6 col-3         !!!!            =<large - col-6     &    >large - col-3          !!!! 
+ 		-->
+
+		<!--  -->
+
 		<div class="row mx-auto p-5">
 			<div class="col-xl-4 col-lg-6 p-5">
 				<img
@@ -129,6 +143,40 @@
 				/>
 			</div>
 		</div>
+		<!--  -->
+
+		<div class="container">
+			<form action="#empty">
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<label for="email">Email</label>
+						<input type="email" class="form-control" id="email" placeholder="Enter your email" />
+					</div>
+					<div class="form-group col-md-6">
+						<label for="password">Password</label>
+						<input type="password" class="form-control" id="password" placeholder="Enter your password" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="state">State</label>
+					<select class="form-control" name="state" id="state">
+						<option value="AL">Alabama</option>
+						<option value="AB">Alaska</option>
+					</select>
+				</div>
+				<div class="custom-control custom-checkbox">
+					<input type="checkbox" class="custom-control-input" id="tos" />
+					<label for="tos" class="custom-control-label">Sign me Up</label>
+				</div>
+			</form>
+		</div>
+
+		<!--  -->
+
+		<div class="container">
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+		</div>
+
 		<!--  -->
 
 		<script
