--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -14,14 +14,36 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<!--  -->
 
-		
-
-
-
+		<nav class="navbar navbar-expand-md navbar-dark bg-info sticky-top">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Navbar</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbar">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Features</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">About</a>
+						</li>
+					</ul>
+					<form class="d-flex ml-auto">
+						<input class="form-control me-2 mx-2" type="search" placeholder="Search" aria-label="Search" />
+						<button class="btn btn-outline-dark px-5" type="submit">Search</button>
+					</form>
+				</div>
+			</div>
+		</nav>
 
 		<!--  -->
-		
+
 		<h1 class="display-1 text-center text-dark mt-2">Bootstrap Grid!</h1>
 		<div class="container">
 			<div class="row mt-5">
