--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -25,18 +25,18 @@
 				<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" href="#">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Features</a>
+							<a class="nav-link active" href="#">Features</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">About</a>
+							<a class="nav-link active" href="#">About</a>
 						</li>
 					</ul>
 					<form class="d-flex ml-auto">
-						<input class="form-control me-2 mx-2" type="search" placeholder="Search" aria-label="Search" />
-						<button class="btn btn-outline-dark px-5" type="submit">Search</button>
+						<input class="form-control me-2 mx-2" type="search" placeholder="Search" />
+						<button class="btn btn-outline-light px-5" type="submit">Search</button>
 					</form>
 				</div>
 			</div>
