--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -145,21 +145,21 @@
 		<div class="row mx-auto p-5">
 			<div class="col-xl-4 col-lg-6 p-5">
 				<img
-					class="img-fluid"
+					class="img-fluid img-thumbnail"
 					src="https://images.unsplash.com/photo-1501471984908-815b996862f4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
 					alt=""
 				/>
 			</div>
 			<div class="col-xl-4 col-lg-6 p-5">
 				<img
-					class="img-fluid"
+					class="img-fluid img-thumbnail"
 					src="https://images.unsplash.com/photo-1507348762124-e7e0afcc0943?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1070&q=80"
 					alt=""
 				/>
 			</div>
 			<div class="col-xl-4 col-lg-6 p-5">
 				<img
-					class="img-fluid"
+					class="img-fluid img-thumbnail"
 					src="https://images.unsplash.com/photo-1448745799564-e2c1ed534c94?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
 					alt=""
 				/>
@@ -198,6 +198,67 @@
 		<div class="container">
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 		</div>
+
+		<!--  -->
+
+		<div class="container">
+			<div class="row">
+				<!--  -->
+				<div class="col d-flex justify-content-center">
+					<div class="card" style="width: 18rem">
+						<img
+							src="https://images.unsplash.com/photo-1557933488-c8daa2a5772c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+							class="card-img-top"
+							alt="..."
+						/>
+						<div class="card-body">
+							<h5 class="card-title">/Joshua_Rondeau</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk of the card's content.
+							</p>
+							<a href="https://unsplash.com/@liferondeau" target="_blank" class="btn btn-light">Visit Profile</a>
+						</div>
+					</div>
+				</div>
+				<!--  -->
+				<div class="col d-flex justify-content-center">
+					<div class="card" style="width: 18rem">
+						<img
+							src="https://images.unsplash.com/photo-1559188356-be41b3540d15?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+							class="card-img-top"
+							alt="..."
+						/>
+						<div class="card-body">
+							<h5 class="card-title">/Joshua_Rondeau</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk of the card's content.
+							</p>
+							<a href="https://unsplash.com/@liferondeau" target="_blank" class="btn btn-light">Visit Profile</a>
+						</div>
+					</div>
+				</div>
+				<!--  -->
+				<div class="col d-flex justify-content-center">
+					<div class="card" style="width: 18rem">
+						<img
+							src="https://images.unsplash.com/photo-1559188297-dd63e215db56?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+							class="card-img-top"
+							alt="..."
+						/>
+						<div class="card-body">
+							<h5 class="card-title">/Joshua_Rondeau</h5>
+							<p class="card-text">
+								Some quick example text to build on the card title and make up the bulk of the card's content.
+							</p>
+							<a href="https://unsplash.com/@liferondeau" target="_blank" class="btn btn-light">Visit Profile</a>
+						</div>
+					</div>
+				</div>
+				<!--  -->
+			</div>
+		</div>
+
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
 		<!--  -->
 
