--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -18,7 +18,16 @@
 
 		<nav class="navbar navbar-expand-md navbar-dark bg-info sticky-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="25"
+					height="25	"
+					fill="#4ffff6"
+					class="bi bi-slash-lg mr-4"
+					viewBox="0 0 20 20"
+				>
+					<path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z" />
+				</svg>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -205,7 +214,7 @@
 			<div class="row">
 				<!--  -->
 				<div class="col d-flex justify-content-center">
-					<div class="card" style="width: 18rem">
+					<div class="card shadow" style="width: 18rem">
 						<img
 							src="https://images.unsplash.com/photo-1557933488-c8daa2a5772c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
 							class="card-img-top"
@@ -222,7 +231,7 @@
 				</div>
 				<!--  -->
 				<div class="col d-flex justify-content-center">
-					<div class="card" style="width: 18rem">
+					<div class="card shadow" style="width: 18rem">
 						<img
 							src="https://images.unsplash.com/photo-1559188356-be41b3540d15?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
 							class="card-img-top"
@@ -239,7 +248,7 @@
 				</div>
 				<!--  -->
 				<div class="col d-flex justify-content-center">
-					<div class="card" style="width: 18rem">
+					<div class="card shadow" style="width: 18rem">
 						<img
 							src="https://images.unsplash.com/photo-1559188297-dd63e215db56?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
 							class="card-img-top"
@@ -257,6 +266,10 @@
 				<!--  -->
 			</div>
 		</div>
+
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+		<!--  -->
 
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
