--- a/BootstrapGrid/index.html
+++ b/BootstrapGrid/index.html
@@ -7,27 +7,16 @@
 		<title>BootstrapGrid</title>
 		<link
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+			integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<!--  -->
 
 		<nav class="navbar navbar-expand-md navbar-dark bg-info sticky-top">
 			<div class="container-fluid">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					width="25"
-					height="25	"
-					fill="#4ffff6"
-					class="bi bi-slash-lg mr-4"
-					viewBox="0 0 20 20"
-				>
-					<path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z" />
-				</svg>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -195,9 +184,9 @@
 						<option value="AB">Alaska</option>
 					</select>
 				</div>
-				<div class="custom-control custom-checkbox">
-					<input type="checkbox" class="custom-control-input" id="tos" />
-					<label for="tos" class="custom-control-label">Sign me Up</label>
+				<div class="custom-control custom-checkbox mt-5">
+					<input type="checkbox" class="form-check-input" id="tos" />
+					<label for="tos" class="form-check-label">I like blue color</label>
 				</div>
 			</form>
 		</div>
@@ -276,7 +265,7 @@
 		<!--  -->
 
 		<script
-			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 			crossorigin="anonymous"
 		></script>
@@ -286,8 +275,8 @@
 			crossorigin="anonymous"
 		></script>
 		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+			integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
 			crossorigin="anonymous"
 		></script>
 	</body>
